# leptonica

./: CMakeLists.txt
src/: CMakeLists.txt
